Add tools I like

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,17 @@
   <p><a href="https://docflows.unc.edu">DocFlows</a></p>
   <p><a href="https://observablehq.com/@gallowayevan">Observable</a></p>
   <p><a href="https://github.com/gallowayevan">Github</a></p>
+  
+  <p>Tools I Like and Use: 
+    <a href="https://d3js.org/">D3</a>,
+    <a href="https://observablehq.com/">Observable</a>,
+    <a href="https://vuejs.org/">Vue.js</a>,
+    <a href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox GL JS</a>,
+    <a href="https://github.com/mourner/projects">Vladimir Agafonkin's projects</a>,
+    <a href="https://www.r-project.org/">R</a> and <a href="https://rstudio.com/">R Studio</a>,
+    <a href="https://turfjs.org">Turf.js</a>,
+    <a href="https://www.stata.com/">Stata</a>
+  </p>
 
   <form name="contact" method="POST" data-netlify="true">
     Contact
