--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       font-variant: small-caps;
     }
     
+    .no {
+      visibility:hidden;
+    }
+    
   </style>
 </head>
 
@@ -41,8 +45,11 @@
     <a href="https://www.stata.com/">Stata</a>
   </p>
 
-  <form name="contact" method="POST" data-netlify="true">
+  <form name="contact" method="POST" data-netlify="true" netlify-honeypot="no-field">
     Contact
+   <p class="no">
+    <label>Don’t fill this out if you're human: <input name="no-field" /></label>
+  </p>
     <p>
       <label>Your Name: <input type="text" name="name" /></label>
     </p>
