--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,13 @@
     }
     
     .no {
-      visibility:hidden;
+      opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 0;
+        width: 0;
+        z-index: -1;
     }
     
   </style>
