--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,11 @@
 <body>
   <h2>Evan Galloway</h2>
   <h3>Interactive Data Visualization</h3>
-  <p><a href="https://nchealthworkforce.unc.edu">Sheps Health Workforce NC</a></p>
+  <p><a href="https://nchealthworkforce.unc.edu">Sheps Health Workforce NC</a>
+  <ul>
+    <li><a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a></li>
+    <li><a href="https://nchealthworkforce.unc.edu/interactive/age_rural_by_profession/">Age Distribution</a></li>
+  </ul></p>
   <p><a href="https://docflows.unc.edu">DocFlows</a></p>
   <p><a href="https://observablehq.com/@gallowayevan">Observable</a></p>
   <p><a href="https://github.com/gallowayevan">Github</a></p>
@@ -43,9 +47,9 @@
   <p>Tools I Like and Use: 
     <a href="https://d3js.org/">D3</a>,
     <a href="https://observablehq.com/">Observable</a>,
+    <a href="https://svelte.dev/">Svelte.js</a>,
     <a href="https://vuejs.org/">Vue.js</a>,
     <a href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox GL JS</a>,
-    <a href="https://github.com/mourner/projects">Vladimir Agafonkin's projects</a>,
     <a href="https://www.r-project.org/">R</a> and <a href="https://rstudio.com/">R Studio</a>,
     <a href="https://turfjs.org">Turf.js</a>,
     <a href="https://www.stata.com/">Stata</a>
