--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,7 @@
 <body>
   <h2>Evan Galloway</h2>
   <h3>Interactive Data Visualization</h3>
-  <p><a href="https://nchealthworkforce.unc.edu">Sheps Health Workforce NC</a>
-  <ul>
-    <li><a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a></li>
-    <li><a href="https://nchealthworkforce.unc.edu/interactive/age_rural_by_profession/">Age Distribution</a></li>
-  </ul></p>
+  <p><a href="https://nchealthworkforce.unc.edu">Sheps Health Workforce NC</a>: <a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a>, <a href="https://nchealthworkforce.unc.edu/interactive/age_rural_by_profession/">Age Distribution</a></p>
   <p><a href="https://docflows.unc.edu">DocFlows</a></p>
   <p><a href="https://observablehq.com/@gallowayevan">Observable</a></p>
   <p><a href="https://github.com/gallowayevan">Github</a></p>
