--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -1,7 +1,7 @@
 
-<!DOCTYPE NETSCAPE-Bookmark-file-1>
+<!DOCTYPE>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<TITLE>Pinboard Bookmarks</TITLE>
+<TITLE>Bookmarks</TITLE>
 <H1>Bookmarks</H1>
 <DL><p><DT><A HREF="https://observablehq.com/@winkjs/how-to-create-a-context-aware-word-cloud?collection=@winkjs/winknlp-recipes" ADD_DATE="1659381015" PRIVATE="0" TOREAD="0" TAGS="nlp,data-visualization">How to create a context aware word cloud? / WinkJS / Observable</A>
 <DD>The word cloud can be a useful tool to visualise an article or speech text by applying natural language processing to preserve and/or add context. WinkNLP can be used to achieve this with a short piece of code,
