--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -3,10 +3,14 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
 <TITLE>Bookmarks</TITLE>
 <H1>Bookmarks</H1>
-    <DL><p><DT><A HREF="https://observablehq.com/@tmcw/enigma-machine" ADD_DATE="2022-08-17" PRIVATE="0" TOREAD="0" TAGS="data-visualization">Enigma Machine / Tom Macwright / Observable</A>
+    
+<DL><p><DT><A HREF="http://tabulator.info/" ADD_DATE="2022-09-22" PRIVATE="0" TOREAD="0" TAGS="javascript">Tabulator</A>
+<DD>Easy to use, simple to code, fully featured, interactive JavaScript tables
+    
+<DT><A HREF="https://observablehq.com/@tmcw/enigma-machine" ADD_DATE="2022-08-17" PRIVATE="0" TOREAD="0" TAGS="data-visualization">Enigma Machine / Tom Macwright / Observable</A>
 <DD>This notebook simulates an Enigma Machine and visualizes how it works. The Enigma Machine is an especially neat thing to visualize because it was electromechanical. As you used it, it moved. Instead of circuit traces, it had beautiful real wires connecting its pieces.
 
-<DL><p><DT><A HREF="https://observablehq.com/@winkjs/how-to-create-a-context-aware-word-cloud?collection=@winkjs/winknlp-recipes" ADD_DATE="1659381015" PRIVATE="0" TOREAD="0" TAGS="nlp,data-visualization">How to create a context aware word cloud? / WinkJS / Observable</A>
+<DT><A HREF="https://observablehq.com/@winkjs/how-to-create-a-context-aware-word-cloud?collection=@winkjs/winknlp-recipes" ADD_DATE="1659381015" PRIVATE="0" TOREAD="0" TAGS="nlp,data-visualization">How to create a context aware word cloud? / WinkJS / Observable</A>
 <DD>The word cloud can be a useful tool to visualise an article or speech text by applying natural language processing to preserve and/or add context. WinkNLP can be used to achieve this with a short piece of code,
 
 <DT><A HREF="https://www.rand.org/pubs/research_reports/RR1165z2.html" ADD_DATE="1658324484" PRIVATE="0" TOREAD="0" TAGS="geospatial,map">Resources and Capabilities of the Department of Veterans Affairs to Provide Timely and Accessible Care to Veterans | RAND</A>
