--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -5,7 +5,11 @@
 <H1>Bookmarks</H1>
   
 <DL><p>
+  
+<DT><A HREF="https://mitvis.github.io/olli/" ADD_DATE="2022-10-04" PRIVATE="0" TOREAD="0" TAGS="accessibility,data-visualization">Olli</A>
+<DD> Olli is an open-source library for converting data visualizations into accessible text structures for screen reader users. Starting with an existing visualization specification created with a supported toolkit, Olli produces a keyboard-navigable tree view with descriptions at varying levels of detail. Users can explore these structures both to get an initial overview, and to dive into the data in more detail.
 
+Olli comes with built-in support for visualizations created in Vega, Vega-Lite, and Observable Plot. Using an adapter design pattern, Olli can be extended to support any JavaScript visualization library by implementing a function that adapts existing chart instances into a standard OlliVisSpec interface. With the adapter pattern, developers can extend support to new toolkits while re-using the Olli renderer, which implements best practices according to the Accessible Rich Internet Applications (ARIA) standard.  
 <DT><A HREF="https://observablehq.com/@michelleeesi/local-spatial-autocorrelation-interactive-tutorial" ADD_DATE="2022-09-26" PRIVATE="0" TOREAD="0" TAGS="gis,statistics,data-visualization">Local Spatial Autocorrelation Interactive Tutorial</A>
 <DD>When we look at maps, we spot concentrations and groupings of high and low values, start to recognize patterns, and construct stories about what might be going on. But how can we statistically measure where hotspots and coldspots really exist? This is where local spatial autocorrelation comes into play. In this interactive tutorial, we’ll be focusing on a common implementation in the form of the Local Moran statistic, developed by Luc Anselin (1995).   
     
