--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -5,6 +5,14 @@
 <H1>Bookmarks</H1>
   
 <DL><p>
+ 
+  <DT><A HREF="https://observablehq.com/@karimdouieb/us-house-election-2022" ADD_DATE="2022-12-07" PRIVATE="0" TOREAD="0" TAGS="music,math">A better U.S. house election results map?</A>
+<DD>In this notebook, we designed an alternative representation that combines together some of the best elements of the traditional map and the cartogram while overcoming some of their defects:
+
+    States are keeping their geographical integrity, they are just rescaled in such a way that their area becomes proportional to the number of districts they are composed of. They are therefore easily recognisable and their visual impact matches their electoral importance.
+    The US nation is still recognisable from the overall shape of the representation. People can figure by themselves that they are looking at election results.
+    The districts are represented by Voronoi based shapes that subdivide states into roughly equal parts. Allowing tiny but highly populated districts to be as visible as their counterparts.
+    In order to facilitate the comprehension of these visualisation concepts to the largest audience we leveraged the usage of animation in order to transition smoothly from the traditional map to the new cartogram.
   
 <DT><A HREF="https://mitvis.github.io/olli/" ADD_DATE="2022-10-04" PRIVATE="0" TOREAD="0" TAGS="accessibility,data-visualization">Olli</A>
 <DD> Olli is an open-source library for converting data visualizations into accessible text structures for screen reader users. Starting with an existing visualization specification created with a supported toolkit, Olli produces a keyboard-navigable tree view with descriptions at varying levels of detail. Users can explore these structures both to get an initial overview, and to dive into the data in more detail.
