--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -8,6 +8,10 @@
   
   <DT><A HREF="" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="">Title</A>
 <DD>Description
+
+  <DT><A HREF="https://www.bitsaboutmoney.com/archive/the-waste-stream-of-consumer-finance/" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="finance">Credit card debt collectionk</A>
+<DD>One core waste stream of the finance industry is charged-off consumer debt. Debt collection is a fascinating (and frequently depressing) underbelly of finance. It shines a bit of light on credit card issuance itself, and richly earns the wading-through-a-river-of-effluvia metaphor.
+  
   
   <DT><A HREF="https://alexwlchan.net/2023/testing-javascript-without-a-framework/" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="javascript">Testing JavaScript without a (third-party) framework</A>
 <DD>I’ve built myself a tiny framework that lets me write unit tests for my vanilla JS files. Unlike build systems, where the benefits are marginal for smaller projects, a good test suite can be useful for even the smallest bits of code. I added some basic filters to my book tracker last year, and although the core logic is only ~50 lines of code, writing some tests helped me spot several bugs I’d missed.
