--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -9,7 +9,7 @@
   <DT><A HREF="" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="">Title</A>
 <DD>Description
 
-  <DT><A HREF="https://www.bitsaboutmoney.com/archive/the-waste-stream-of-consumer-finance/" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="finance">Credit card debt collectionk</A>
+  <DT><A HREF="https://www.bitsaboutmoney.com/archive/the-waste-stream-of-consumer-finance/" ADD_DATE="" PRIVATE="0" TOREAD="0" TAGS="finance">Credit card debt collection</A>
 <DD>One core waste stream of the finance industry is charged-off consumer debt. Debt collection is a fascinating (and frequently depressing) underbelly of finance. It shines a bit of light on credit card issuance itself, and richly earns the wading-through-a-river-of-effluvia metaphor.
   
   
