--- a/public/vis_analytics/index.html
+++ b/public/vis_analytics/index.html
@@ -228,9 +228,31 @@ Neat because it is block group level (which they call neighborhood.) Also this t
 Look in NYC too.     
 
 </notes>
+
+</div>
+
+<!-- Slide 18 -->
+<div class=layout style='grid-template-rows: 90% 10%;'>
+ <a href="https://www.ers.usda.gov/data-products/rural-urban-commuting-area-codes/documentation/"><img src="img/ruca.png"
+     alt="RUCA classifications"></a> <small class=nowrap>Rural-Urban Commuting Area</small>
+ 
+ <notes>
+RUCAs  
+
+</notes>
+</div>
     </div>
 
-  
+     <!-- Slide 18 -->
+     <div class=layout style='grid-template-rows: 90% 10%;'>
+      <a href="https://scratchpad-dept-healthworkforce.apps.cloudapps.unc.edu/bh_by_block_group"><img src="img/bh_workforce_by_ruca.png"
+          alt="Heat map of behavioral health per 100k by RUCA."></a><small class=nowrap>Behavioral health Providers per 100k by RUCA</small>
+      
+      <notes>
+This is another example where we were looking at Behvioral Health providers per 100k population by a measure called RUCA   
+
+</notes>
+    </div>
   <!-- Slide 19 -->
   <div>
     Svelte
