--- a/public/index.html
+++ b/public/index.html
@@ -35,20 +35,20 @@
 <body>
   <h2>Evan Galloway</h2>
   <h3>Interactive Data Visualization</h3>
-  <p><a href="https://nchealthworkforce.unc.edu">Sheps Health Workforce NC</a> : <a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a>, <a href="https://nchealthworkforce.unc.edu/interactive/age_rural_by_profession/">Age Distribution</a></p>
+  <p><a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a></p>
+  <p><a href="https://ncnursecast.unc.edu/model/">North Carolina Nursing Forecasts</a></p>
+  <p><a href="https://ncnursecast.unc.edu/diffusion/">Diffusion of Nurse Graduates/a></p>
+  <p><a href="https://pedsubspecforecast.unc.edu/">Pedicatric Subspecialty Physician Forecasts</a></p>
   <p><a href="https://docflows.unc.edu">DocFlows</a></p>
-  <p><a href="https://observablehq.com/@gallowayevan">Observable</a></p>
-  <p><a href="https://github.com/gallowayevan">Github</a></p>
+  <p><a href="https://observablehq.com/@gallowayevan">Observable Profile</a></p>
+  <p><a href="https://github.com/gallowayevan">Github Repositories</a></p>
   
   <p>Tools I Like and Use: 
     <a href="https://d3js.org/">D3</a>,
-    <a href="https://observablehq.com/">Observable</a>,
-    <a href="https://svelte.dev/">Svelte.js</a>,
-    <a href="https://vuejs.org/">Vue.js</a>,
+    <a href="https://observablehq.com/">Observable</a>/<a href="https://observablehq.com/plot/">Observable Plot</a>/,
+    <a href="https://svelte.dev/">Svelte.js</a>/<a href="https://kit.svelte.dev/">SvelteKit</a>,
     <a href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox GL JS</a>,
-    <a href="https://www.r-project.org/">R</a> and <a href="https://rstudio.com/">R Studio</a>,
-    <a href="https://turfjs.org">Turf.js</a>,
-    <a href="https://www.stata.com/">Stata</a>
+<a href="https://www.postgresql.org/">PostgreSQL</a>/<a href="https://postgis.net/">PostGIS</a>
   </p>
 
   <form name="contact" method="POST" data-netlify="true" netlify-honeypot="no-field">
