--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <h3>Interactive Data Visualization</h3>
   <p><a href="https://nchealthworkforce.unc.edu/interactive/supply/">Workforce Supply</a></p>
   <p><a href="https://ncnursecast.unc.edu/model/">North Carolina Nursing Forecasts</a></p>
-  <p><a href="https://ncnursecast.unc.edu/diffusion/">Diffusion of Nurse Graduates/a></p>
+  <p><a href="https://ncnursecast.unc.edu/diffusion/">Diffusion of Nurse Graduates</a></p>
   <p><a href="https://pedsubspecforecast.unc.edu/">Pedicatric Subspecialty Physician Forecasts</a></p>
   <p><a href="https://docflows.unc.edu">DocFlows</a></p>
   <p><a href="https://observablehq.com/@gallowayevan">Observable Profile</a></p>
@@ -45,8 +45,9 @@
   
   <p>Tools I Like and Use: 
     <a href="https://d3js.org/">D3</a>,
-    <a href="https://observablehq.com/">Observable</a>/<a href="https://observablehq.com/plot/">Observable Plot</a>/,
+    <a href="https://observablehq.com/">Observable</a>/<a href="https://observablehq.com/plot/">Observable Plot</a>,
     <a href="https://svelte.dev/">Svelte.js</a>/<a href="https://kit.svelte.dev/">SvelteKit</a>,
+    <a href="https://www.stata.com/">Stata/a>,
     <a href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox GL JS</a>,
 <a href="https://www.postgresql.org/">PostgreSQL</a>/<a href="https://postgis.net/">PostGIS</a>
   </p>
