--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <a href="https://d3js.org/">D3</a>,
     <a href="https://observablehq.com/">Observable</a>/<a href="https://observablehq.com/plot/">Observable Plot</a>,
     <a href="https://svelte.dev/">Svelte.js</a>/<a href="https://kit.svelte.dev/">SvelteKit</a>,
-    <a href="https://www.stata.com/">Stata/a>,
+    <a href="https://www.stata.com/">Stata</a>,
     <a href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox GL JS</a>,
 <a href="https://www.postgresql.org/">PostgreSQL</a>/<a href="https://postgis.net/">PostGIS</a>
   </p>
